docs/grammar.txt
<program>       ::= "int" "main" "(" ")" "{" <statements> "}"

<statements>    ::= <statement> <statements> | ε

<statement>     ::= <declaration>     | 
                    <assignment>      | 
                    <if-statement>    | 
                    <while-statement>

<declaration>   ::= <type> <identifier> "=" <expression> ";"

<assignment>    ::= <identifier> "=" <expression> ";"

<if-statement>  ::= "if" "(" <expression> ")" "{" <statements> "}"

<while-statement>::= "while" "(" <expression> ")" "{" <statements> "}"

<expression>    ::= <term>            | 
                    <term> "+" <term> | 
                    <term> "-" <term>

---> doing it this way automatically gives order of ops
<term>          ::= <factor> |
                    <factor> "*" <factor> | 
                    <factor> "/" <factor>

<factor>        ::= <identifier> | 
                    <number> | 
                    <string> | 
                    "(" <expression> ")"

<type>          ::= "int" | "float" | "char" | "string"


pseudocode for parsing expression
